--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.63a26457.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.34d48100.js"></script>
-    <link rel="stylesheet" href="/assets/index.b2751acf.css">
-  </head>
-  <body>
-    <div id="root"></div>
-    
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/assets/logo.c2c461ac.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Techsonance 2022</title>
+  <script type="module" crossorigin src="/assets/index.34d48100.js"></script>
+  <link rel="stylesheet" href="/assets/index.b2751acf.css">
+</head>
+
+<body>
+  <div id="root"></div>
+
+</body>
+
 </html>
