--- a/src/events/index.html
+++ b/src/events/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/src/assets/logo.png" />
+  <link rel="icon" type="image/svg+xml" href="./assets/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Techsonance 2022</title>
 </head>
@@ -12,7 +12,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="./Events.jsx"></script>
   <script src="./TW-ELEMENTS-PATH/dist/js/index.min.js"></script>
 </body>
 
