--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/assets/logo.c2c461ac.png" />
+  <link rel="icon" type="image/svg+xml" href="dist/assets/logo.c2c461ac.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Techsonance 2022</title>
-  <script type="module" crossorigin src="/assets/index.1ce99eaf.js"></script>
-  <link rel="stylesheet" href="/assets/index.82453956.css">
+  <script type="module" crossorigin src="dist/assets/index.1ce99eaf.js"></script>
+  <link rel="stylesheet" href="dist/assets/index.82453956.css">
 </head>
 
 
 
 <body>
   <div id="root"></div>
-  
+
   <script src="./TW-ELEMENTS-PATH/dist/js/index.min.js"></script>
 </body>
 
